feat: Add 3 col Dropdown, expand search bar

--- a/eB.html
+++ b/eB.html
@@ -33,7 +33,7 @@
                     Shop by<br> category
                   </a>
                   <div class="dropdown-menu " aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">lorem</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
@@ -48,8 +48,5 @@
           </div>
       </div>
     </nav>
-    <div class="container bg-light">
-
-    </div>
   </body>
 </html>
