--- a/BBBB.html
+++ b/BBBB.html
@@ -9,10 +9,44 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<!--
+
     <style>
-      #navBarSearchForm input[type=text]{width:430px !important;}
-    </style> -->
+      #gh-f input[type=text]{
+        width:500px !important;
+      }
+
+          .dropdown-menu.columns-3 {
+          	min-width: 600px;
+          }
+          .dropdown-menu li a {
+          	padding: 5px 15px;
+          	font-weight: 300;
+          }
+          .multi-column-dropdown {
+          	list-style: none;
+            margin: 0px;
+            padding: 0px;
+          }
+          .multi-column-dropdown li a {
+          	display: block;
+          	clear: both;
+          	line-height: 1.428571429;
+          	color: #333;
+          	white-space: normal;
+          }
+          .multi-column-dropdown li a:hover {
+          	text-decoration: none;
+          	color: #262626;
+          	background-color: #999;
+          }
+
+          @media (max-width: 767px) {
+          	.dropdown-menu.multi-column {
+          		min-width: 240px !important;
+          		overflow-x: hidden;
+          	}
+          }
+    </style>
 
 
   </head>
@@ -30,7 +64,7 @@
 
         <ul class="nav navbar-nav">
 
-          <li class="dropdown">
+          <!-- <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="font-size:14px; color=#555; LINE-HEIGHT:15px; font-family:Helvetica; padding-left:0px;">
               Shop by <br>category <span class="caret"></span>
             </a>
@@ -39,7 +73,51 @@
               <li><a href="#" class="dropdown-item">lorem2</a></li>
               <li><a href="#" class="dropdown-item">lorem3</a></li>
             </ul>
-          </li>
+          </li> -->
+
+          <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="font-size:14px; color=#555; LINE-HEIGHT:15px; font-family:Helvetica; padding-left:0px;">
+                Shop by <br>category <b class="caret"></b> <!-- <span class="caret"></span> -->
+              </a>
+	            <!-- <a href="#" class="dropdown-toggle" data-toggle="dropdown">Three Column <b class="caret"></b></a> -->
+	            <ul class="dropdown-menu multi-column columns-3">
+		            <div class="row">
+			            <div class="col-sm-4">
+				            <ul class="multi-column-dropdown">
+					            <li><a href="#">Action</a></li>
+					            <li><a href="#">Another action</a></li>
+					            <li><a href="#">Something else here</a></li>
+					            <li class="divider"></li>
+					            <li><a href="#">Separated link</a></li>
+					            <li class="divider"></li>
+					            <li><a href="#">One more separated link</a></li>
+				            </ul>
+			            </div>
+			            <div class="col-sm-4">
+				            <ul class="multi-column-dropdown">
+					            <li><a href="#">Action</a></li>
+					            <li><a href="#">Another action</a></li>
+					            <li><a href="#">Something else here</a></li>
+					            <li class="divider"></li>
+					            <li><a href="#">Separated link</a></li>
+					            <li class="divider"></li>
+					            <li><a href="#">One more separated link</a></li>
+				            </ul>
+			            </div>
+			            <div class="col-sm-4">
+				            <ul class="multi-column-dropdown">
+					            <li><a href="#">Action</a></li>
+					            <li><a href="#">Another action</a></li>
+					            <li><a href="#">Something else here</a></li>
+					            <li class="divider"></li>
+					            <li><a href="#">Separated link</a></li>
+					            <li class="divider"></li>
+					            <li><a href="#">One more separated link</a></li>
+				            </ul>
+			            </div>
+		            </div>
+	            </ul>
+	        </li>
 
           <li>
                <form id="gh-f" method="get" action="#API_CALL">
@@ -115,6 +193,5 @@
 
       </div>
     </nav>
-
   </body>
 </html>
