--- a/BBBB.html
+++ b/BBBB.html
@@ -11,9 +11,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <style>
-      #gh-f input[type=text]{
-        width:500px !important;
-      }
+          #gh-f input[type=text]{
+            width:580px !important;
+          }
 
           .dropdown-menu.columns-3 {
           	min-width: 600px;
@@ -52,13 +52,13 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-default bg-light" >
+    <nav class="navbar navbar-default navbar-expand-lg" >
       <div class="container">
 
         <!-- logo -->
         <div class="navbar-header">
           <a class="navbar-brand" href="#">
-            <img role="presentation" width=100 height=35 alt="" src="images/logo.png" id="gh-logo">
+            <img role="presentation" width=100 height=38 alt="" src="images/logo.png" id="gh-logo">
           </a>
         </div>
 
@@ -75,8 +75,8 @@
             </ul>
           </li> -->
 
-          <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="font-size:14px; color=#555; LINE-HEIGHT:15px; font-family:Helvetica; padding-left:0px;">
+          <li class="nav-item dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" role="button" href="#" style="font-size:14px; color=#555; LINE-HEIGHT:15px; font-family:Helvetica; padding-left:0px;">
                 Shop by <br>category <b class="caret"></b> <!-- <span class="caret"></span> -->
               </a>
 	            <!-- <a href="#" class="dropdown-toggle" data-toggle="dropdown">Three Column <b class="caret"></b></a> -->
@@ -118,8 +118,8 @@
 		            </div>
 	            </ul>
 	        </li>
-
-          <li>
+        </ul>
+          <!-- <li> -->
                <form id="gh-f" method="get" action="#API_CALL">
                <input type="hidden" value="R40" name="_from">
                <input type="hidden" name="_trksid" value="m570.l1313">
@@ -138,7 +138,7 @@
                         </td>
                         <td class="gh-td" id="gh-cat-td">
                            <div id="gh-cat-box" class="">
-                              <select aria-label="Select a category for search" class="gh-sb gh-sprRetina" size="1" id="gh-cat" name="_sacat" style="height:40px; width:190px;line-height:1; margin-right:5px; margin-left:2px">
+                              <select aria-label="Select a category for search" class="gh-sb gh-sprRetina" size="1" id="gh-cat" name="_sacat" style="height:40px; width:190px;line-height:1; margin-right:5px; margin-left:2px ">
                                  <option selected="selected" value="0">All Categories</option>
                                  <option value="293">Audio &amp; Home Entertainment</option>
                                  <option value="131090">Automotive</option>
@@ -187,9 +187,7 @@
                   </tbody>
                </table>
               </form>
-          </li>
-        </ul>
-
+          <!-- </li> -->
 
       </div>
     </nav>
